syntax = "proto3";
package Godot;

message Vector3 {
    float x = 1;
    float y = 2;
    float z = 3;
}

message Entity {
    uint32 uuid = 1;
    Vector3 position = 2;
    Vector3 velocity = 3;
}
